; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_default_execute.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_default_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.htc_data = type { i32 }

@.str = private unnamed_addr constant [44 x i8] c"http_client_execute: op=%d, header_size=%d\0A\00", align 1
@SKIP_ALL_BYTES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @htc_default_execute(%struct.connection* %0, i32 %1) #0 {
  %3 = alloca %struct.connection*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.htc_data*, align 8
  store %struct.connection* %0, %struct.connection** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.connection*, %struct.connection** %3, align 8
  %7 = call %struct.htc_data* @HTC_DATA(%struct.connection* %6)
  store %struct.htc_data* %7, %struct.htc_data** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.htc_data*, %struct.htc_data** %5, align 8
  %10 = getelementptr inbounds %struct.htc_data, %struct.htc_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @vkprintf(i32 1, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %11)
  %13 = load i32, i32* @SKIP_ALL_BYTES, align 4
  ret i32 %13
}

declare dso_local %struct.htc_data* @HTC_DATA(%struct.connection*) #1

declare dso_local i32 @vkprintf(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
